# DjangoProject

DjangoProject/: pyproject.toml
DjangoProject/AnotherApp/: urls.py  views.py
DjangoProject/NewApp/: admin.py  forms.py  models.py  urls.py  views.py
DjangoProject/NewApp/migrations/: 0001_initial.py
DjangoProject/NewApp/templatetags/: CustomTemplateFilter.py
DjangoProject/NewProject/: settings.py  urls.py
DjangoProject/TemplateFolder/: ActionsPage.html  AddNewEntry.html  PerformanceDetails.html  UpdateExistingEntry.html  Username.html  ViewAllEntries.html
