[project]
name = "djangoproject"
version = "0.1.0"
description = "Simple Django project"
authors = [
    {name = "vaibhav"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==5.2.3)",
    "sqlparse (==0.5.3)",
    "tzdata (==2025.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
